--- a/templates/components/project_list.html
+++ b/templates/components/project_list.html
@@ -4,6 +4,7 @@
         {% comment %} {% include "project_list_header.html" %} {% endcomment %}
     </div>
     <div class="projectListCardsContainer">
+        {{projectList}}
         {% for project in projectList %}
             {% include "components\project_list_card.html" with project=project %}
         {% endfor %}
