--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -6,6 +6,55 @@
 @tailwind base;
 @tailwind components;
 
+@layer base {
+
+  h1 {
+    font-size: 70px;
+    line-height: 75.5px;
+    letter-spacing: 0.5px;
+    font-weight: 700; 
+  }
+  h2 {
+    font-size: 55px;
+    line-height: 41px;
+    letter-spacing: 0.5px;
+    font-weight: 700; 
+  }
+  h3 {
+    font-size: 40px;
+    line-height: 41px;
+    letter-spacing: 0.5px;
+    font-weight: 700; 
+  }
+  h4 {
+    font-size: 25px;
+    line-height: 38px;
+    letter-spacing: 0.5px;
+    font-weight: 600; 
+  }
+
+  body {
+    font-size: 18px;
+    line-height: 38px;
+    letter-spacing: 0.5px;
+    font-weight: 500; 
+  }
+  button {
+    font-size: 18px;
+    line-height: 30px;
+    letter-spacing: 0.5px;
+    font-weight: 600; 
+  }
+
+  a {
+    font-size: 17px;
+    line-height: 15px;
+    letter-spacing: 0.5px;
+    font-weight: 600; 
+  }
+
+}
+
 @layer components {
   /* 
   Button base styles.
