--- a/templates/app/about_us_content.html
+++ b/templates/app/about_us_content.html
@@ -1,7 +1,7 @@
 {% load static %}
 <section id="about_us" class="w-full my-[10rem] background">
   <article class="w-1/2 m-auto">
-    <h2 class="text-[3rem] my-5 text-center">About Us</h2>
+    <h2 class="text-[3rem] mt-5 mb-[60px] text-center">About Us</h2>
     <p class="text-center">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum suspendisse lorem nunc vivamus egestas ut sed morbi. Eget sapien id iaculis senectus mattis nulla in felis mauris. Arcu aenean placerat donec ut nullam vel, facilisis. Montes, nisl, eget vitae, nisi tortor massa. Ut pharetra lacinia metus nunc turpis lectus pellentesque non. Proin varius porttitor mauris, malesuada amet vulputate.
     </p>
