--- a/templates/app/setting.html
+++ b/templates/app/setting.html
@@ -18,7 +18,7 @@
         {% csrf_token %}
         <div class="border-2 rounded-xl p-5">
           <div class="space-y-2">
-            <label for="email" class="">Update your email address</label>
+            <label for="email" class="text-[25px]">Update your email address</label>
             <p>
               Change the email address you want to associate with your account.
              </p>
@@ -31,7 +31,7 @@
             maxlength="254" 
             value="{{request.user.profile.email}}" 
             placeholder="Write your email here" 
-            class="input my-4 px-2"
+            class="input my-4 px-2 placeholder-gray-500"
             />
             <button type="submit" class="button">Save</button>
           </div>
@@ -41,7 +41,7 @@
             <img src="{{request.user.profile.image.url}}" alt="profile.img" class="w-full h-44 object-cover object-top border-2 rounded-full">
           </div>
           <p id="output"></p>
-          <label for="image_input" class=" cursor-pointer">Update your image</label>
+          <label for="image_input" class=" cursor-pointer text-[25px]">Update your image</label>
           <div class="space-x-4">
             <input id="image_input" name="image" type="file" value="{{request.user.profile.image.url}}" class="cursor-pointer" onchange="myFile()">
            <button type="submit" class="button">Save</button>
@@ -50,7 +50,7 @@
   
         <div class="border-2 rounded-xl p-5">
           <div class="space-y-2">
-            <label for="bio" class="">Update your biography</label>
+            <label for="bio" class="text-[25px]">Update your biography</label>
             <p class="">Tell me about yourself</p>
           </div>
           <textarea name="bio" id="bio" class="input bg-transparent border-2 rounded-xl overflow-hidden min-h-[100px] my-4 px-2 resize-none box-border w-full">{{request.user.profile.bio}}</textarea>
