--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -47,7 +47,7 @@
       </div>
       <div class="ml-10">
         <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.username | title}}</p>
-        <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.profile.email}}</p>
+        <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.profile.email|default:""}}</p>
       </div>
     </div>
     <!-- end of profile -->
