--- a/templates/app/profile.html
+++ b/templates/app/profile.html
@@ -9,10 +9,10 @@
     <div class="ml-80 mt-20 bg-background h-full space-y-4">
         <div id="profile" class="flex items-center justify-center space-x-10 pt-9">
           <div id="pic-container" class="w-52">
-            <img src="{{request.user.profile.image.url}}" alt="profile.img" class="w-full h-52 object-cover object-top rounded-full">
+            <img src="{{request.user.profile.image.url}}" alt="" class="w-full h-52 object-cover object-top rounded-full border-2">
           </div>
           <div>
-            <p class="text-4xl mb-5">{{request.user.username|title}}</p>
+            <h3 class="mb-5">{{request.user.username|title}}</h3>
             <a href="{% url 'setting' %}">
               <button class="button p-3">
                 Edit Profile
@@ -23,7 +23,7 @@
 
         <div id="grid" class="grid gap-8 grid-cols-2 p-20">
           <div id="bio" class="border-2 rounded-xl p-5 space-y-3 hover:bg-slate-300 hover:text-black hover:-translate-y-0.5 transform transition">
-            <h3 class='text-2xl'>Biography</h3>
+            <h4>Biography</h4>
             <p class="break-words">
               {% if request.user.profile.bio %}
                 {{request.user.profile.bio}}
@@ -33,7 +33,7 @@
             </p>
           </div>
           <div id="add-info" class="border-2 rounded-xl p-5 space-y-3 hover:bg-slate-300 hover:text-black hover:-translate-y-0.5 transform transition">
-            <h3 class='text-2xl'>Extra Info</h3>
+            <h4>Extra Info</h4>
             <div id="created-time">
               <p>📅 Member since {{request.user.profile.date_created}} </p>
             </div>
@@ -43,8 +43,8 @@
           </div>
 
           <div id="email" class="border-2 rounded-xl p-5 space-y-3 hover:bg-slate-300 hover:text-black hover:-translate-y-0.5 transform transition">
-            <h3 class='text-2xl'>Email</h3>
-            <p class="break-words">{{request.user.profile.email}}</p>
+            <h4>Email</h4>
+            <p class="break-words">{{request.user.email}}</p>
           </div>
         </div>
 
