--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -43,7 +43,7 @@
     <!-- profile: img, profile-info(name, info) -->
     <div class="flex justify-start items-center h-20">
       <div id="pic-container" class="w-12">
-        <img src="{{request.user.profile.image.url}}" alt="profile.img" class="w-full h-12 object-cover object-top rounded-full">
+        <img src="{{request.user.profile.image.url}}" alt="" class="w-full h-12 border-2 object-cover object-top rounded-full">
       </div>
       <div class="ml-10">
         <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.username | title}}</p>
