--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -8,13 +8,13 @@
     class="flex justify-end items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none"
   >
     <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-      <a href="#about_us">About Us</a>
+      <a href="{% url "landing_page"%}/#about_us %}">About Us</a>
     </li>
     <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-      <a href="#how_it_works">How It Works</a>
+      <a href="{% url "landing_page"%}/#how_it_works %}">How it Works</a>
     </li>
     <li class="mx-10 cursor-pointer">
-      <a href="{% url 'login' %}"
+      <a href="{% url 'auth_page' %}"
         ><button class="button bg-dark-gradient button-transition">
           Log In
         </button></a
@@ -33,10 +33,10 @@
         <a href="{% url 'landing_page' %}">Logo</a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'about_us' %}">About Us</a>
+        <a href="{% url "landing_page"%}/#about_us %}">About Us</a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'how_it_works'%}">How It Works</a>
+        <a href="{% url "landing_page"%}/#how_it_works %}">How it Works</a>
       </li>
     </ul>
     <!-- end of links -->
