--- a/templates/app/landing_page.html
+++ b/templates/app/landing_page.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {%block headers%}
-  <title>Coding Journey</title>
+  <title>{{ document_title }}</title>
 {%endblock headers%}
 
 {%block nav%}
@@ -13,9 +13,9 @@
 <section id="banner" class="w-full h-full bg-cover bg-center bg-origin-border bg-fixed bg-blend-darken bg-[url('/static/images/journey_image.jpg')] bg-[#0000004d]">
   <div class="flex h-[95%]">
     <div class="w-1/2 mt-[10%] ml-[15%]">
-      <h1 class="font-bold text-[4rem] w-[70%]">{{ site_title|title|linebreaks }}</h1>
+      <h1 class="font-bold text-[4rem] w-[70%]">Design your coding journey</h1>
       <p class="w-1/2 text-xl text-gray-100">
-        {{ site_description }}
+        Coding Journey is a journal for programmers. Mark your current destination, create your coding path, explore other coders' journey and more!
       </p>
       <button class="bg-primary-gradient button-xl button-transition mt-10">Start Now</button>
     </div>
