updated frontend to fit latest changes in views.py and urls.py

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -41,15 +41,17 @@
     </ul>
     <!-- end of links -->
     <!-- profile: img, profile-info(name, info) -->
-    <div class="flex justify-start items-center h-20">
-      <div id="pic-container" class="w-12">
-        <img src="{{request.user.profile.image.url}}" alt="profile.img" class="w-full h-12 object-cover object-top rounded-full">
+    {% if request.user.profile %}
+      <div class="flex justify-start items-center h-20">
+        <div id="pic-container" class="w-12">
+          <img src="{{request.user.profile.image.url}}" alt="profile.img" class="w-full h-12 object-cover object-top rounded-full">
+        </div>
+        <div class="ml-10">
+          <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.username | title}}</p>
+          <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.profile.email}}</p>
+        </div>
       </div>
-      <div class="ml-10">
-        <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.username | title}}</p>
-        <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.profile.email}}</p>
-      </div>
-    </div>
+    {% endif %}
     <!-- end of profile -->
   </div>
   <!-- end of container -->
