commented on input component to not include the template

--- a/templates/components/.input.html
+++ b/templates/components/.input.html
@@ -1,4 +1,13 @@
 
+
+<!-- 
+
+  PLEASE DO NOT USE THIS TEMPLATE ANYMORE AS IT HAS BEEN RATHER ANNOYTHING TO IMPLEMENT IN OTHER TEMPLATES.
+  USE IT AS A GUY TO CREATE AN INPUT WITH THE SAME STYLING.
+
+ -->
+
+
 {% with attributes=input_context.attributes label=input_context.label %}
 
 <div
