--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -5,6 +5,12 @@
 
 @tailwind base;
 
+@layer base {
+  * {
+    @apply font-sans;
+  }
+}
+
 @tailwind components;
 
 @layer components {
@@ -261,4 +267,17 @@
 .node,
 .node-category {
   fill: var(--primary-darker);
+  cursor: pointer;
+}
+
+.node-label, .node-title {
+  font-size: 16px;
+  text-anchor: middle;
+  font-weight: 400;
+  fill: white;
+}
+
+.node-title {
+  font-size: 24px;
+  font-weight: 700;
 }
