--- a/templates/app/d.html
+++ b/templates/app/d.html
@@ -6,7 +6,7 @@
 {% endblock nav %}      
 
 {% block content %}
-<div id="treeContainer" class="w-[500px] h-[500px]"></div>
+<div id="treeContainer" class="w-1/2 h-1/2"></div>
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script>
     var received_data  = '{{ tree_json|safe }}'
