--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -8,10 +8,10 @@
     class="flex justify-end items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none"
   >
     <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-      <a href="{% url "landing_page"%}/#about_us %}">About Us</a>
+      <a href="{% url 'landing_page' %}#about_us">About Us</a>
     </li>
     <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-      <a href="{% url "landing_page"%}/#how_it_works %}">How it Works</a>
+      <a href="{% url 'landing_page' %}#how_it_works">How it Works</a>
     </li>
     <li class="mx-10 cursor-pointer">
       <a href="{% url 'auth_page' %}"
@@ -33,10 +33,10 @@
         <a href="{% url 'landing_page' %}">Logo</a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url "landing_page"%}/#about_us %}">About Us</a>
+        <a href="{% url 'landing_page' %}#about_us">About Us</a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url "landing_page"%}/#how_it_works %}">How it Works</a>
+        <a href="{% url 'landing_page' %}#how_it_works">How it Works</a>
       </li>
     </ul>
     <!-- end of links -->
