login and register working fine for now
fixing the minor fixes that cause bugs

--- a/templates/components/menu_item.html
+++ b/templates/components/menu_item.html
@@ -2,4 +2,5 @@
 
 <div id="menu_item" class="flex space-x-2 py-1 items-center">
   {% include "components/logo.html" %}
+  <a href="{% url link %}">{{ name }}</a>
 </div>
