--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav
-  class="{% if transparent %} bg-transparent {% else %} bg-dark {% endif %} w-full h-20 {% if alternate %} fixed top-0 left-0 z-[2] {% else %} fixed top-0 left-0 z-[2]{% endif %}  transition-all duration-200"
+  class="{% if transparent %} bg-transparent {% else %} bg-dark {% endif %} w-full h-20 {% if alternate %} fixed top-0 left-0 z-[2] {% endif %}  transition-all duration-200"
 >
   {%if alternate %}
   <ul
@@ -16,7 +16,11 @@
     <li class="mx-10 cursor-pointer">
       <a href="{% url 'auth_page' %}"
         ><button class="button bg-dark-gradient button-transition">
-          Log In
+          {% if user.is_authenticated %}
+            Dashboard
+          {% else %}
+            Log In
+          {% endif %}
         </button></a
       >
     </li>
@@ -48,7 +52,7 @@
         </div>
         <div class="ml-10">
           <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.username | title}}</p>
-          <p class="cursor-pointer opacity-70 hover:opacity-100">{{request.user.profile.email|default:""}}</p>
+          <a href="{% url 'logout' %}">Log Out</a>
         </div>
       </div>
     {% endif %}
