--- a/templates/app/profile.html
+++ b/templates/app/profile.html
@@ -13,7 +13,7 @@
           </div>
           <div>
             <h3 class="mb-5">{{request.user.username|title}}</h3>
-            <a href="{% url 'setting' %}">
+            <a href="{% url 'settings_page' %}">
               <button class="button p-3">
                 Edit Profile
               </button>
