Little adjustments to the UI - Change background color to not be just black. - Change the name of the homepage html file to dashboard

--- a/templates/app/landing_page.html
+++ b/templates/app/landing_page.html
@@ -17,7 +17,7 @@
       <p class="w-1/2 text-xl text-gray-100">
         Coding Journey is a journal for programmers. Mark your current destination, create your coding path, explore other coders' journey and more!
       </p>
-      <button class="bg-primary-gradient button-xl button-transition">Start Now</button>
+      <button class="bg-primary-gradient button-xl button-transition mt-4">Start Now</button>
     </div>
     <div class="relative top-1/4 right-[10rem] w-1/2 h-[400px]">
       <img src="{% static 'images/projects_search.jpg' %}" alt="projects search view" class="w-[70%] absolute left-[30%] rounded-md drop-shadow-lg">
