setting and profile minor bugs fixed
fixing the backend for setting and the links for both setting and profile

--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -13,7 +13,6 @@
       font-bold;
   }
 
-
   h1 {
     @apply
       text-h1
@@ -148,6 +147,7 @@
 
     top: -17%;
   }
+
 }
 
 @tailwind utilities;
@@ -222,6 +222,14 @@
 
   .text-valid {
     @apply text-success peer-invalid:text-success;
+  }
+
+  .error {
+    @apply bg-error p-2 rounded-md;
+  }
+
+  .success {
+    @apply bg-success p-2 rounded-md;
   }
 }
 
