--- a/templates/app/profile.html
+++ b/templates/app/profile.html
@@ -44,7 +44,7 @@
 
           <div id="email" class="border-2 rounded-xl p-5 space-y-3 hover:bg-slate-300 hover:text-black hover:-translate-y-0.5 transform transition">
             <h4>Email</h4>
-            <p class="break-words">{{request.user.email}}</p>
+            <p class="break-words">{{request.user.profile.email}}</p>
           </div>
         </div>
 
