--- a/templates/app/how_it_works_content.html
+++ b/templates/app/how_it_works_content.html
@@ -1,8 +1,8 @@
 {% load static %}
 <a id="how_it_works" name="how_it_works"></a> 
-<section id="how_it_works_section" class="w-full relative">
+<section id="how_it_works_section" class="w-full mt-40 relative">
   <article class="w-1/2 m-auto">
-    <h2 class="text-[3rem] mt-40 mb-[60px] text-left w-fit">How it Works</h2>
+    <h2 class="text-[3rem] mb-[60px] text-left w-fit">How it Works</h2>
     <p class="text-left m-auto mb-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum suspendisse lorem nunc vivamus egestas ut sed morbi. Eget sapien id iaculis senectus mattis nulla in felis mauris. Arcu aenean placerat donec ut nullam vel, facilisis. Montes, nisl, eget vitae, nisi tortor massa. Ut pharetra lacinia metus nunc turpis lectus pellentesque non. Proin varius porttitor mauris, malesuada amet vulputate. Diam feugiat mattis eu non nisi, erat urna blandit integer. Felis ut non eu varius euismod vel, nisl imperdiet pulvinar. Suscipit fermentum nisl, amet id justo integer montes, ac. Lorem lectus felis, integer dolor. Faucibus nunc mauris maecenas bibendum neque, libero tortor consequat. Euismod nullam gravida aliquet elementum aliquam. Massa auctor at urna adipiscing sollicitudin faucibus sed tristique.</p>
   </article>
   {% include 'icons/double_chevron_down.html' with class="h-8 w-8 m-auto animate-bounce" %}
