--- a/templates/app/landing_page.html
+++ b/templates/app/landing_page.html
@@ -12,7 +12,7 @@
 {%block content %}
 <section id="banner" class="w-full h-full bg-cover bg-center bg-origin-border bg-fixed bg-blend-darken bg-[url('/static/images/journey_image.jpg')] bg-[#0000004d]">
   <div class="flex h-[95%]">
-    <div class="w-1/2 mt-[10%] ml-[15%]">
+    <div class="w-1/2 mt-[10%] ml-[15%] space-y-4 ">
       <h1 class="font-bold text-[4rem] w-[70%]">Design your coding journey</h1>
       <p class="w-1/2 text-xl text-gray-100">
         Coding Journey is a journal for programmers. Mark your current destination, create your coding path, explore other coders' journey and more!
