move jquery script tag inside node_side_bar.html

--- a/templates/components/node_side_bar.html
+++ b/templates/components/node_side_bar.html
@@ -62,4 +62,5 @@
     </section>
   </main>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static 'js/node_side_bar.js' %}"></script>
