minor fixed for the styling

--- a/templates/app/homepage.html
+++ b/templates/app/homepage.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block headers %} 
-    <title>Homepage</title>
+    <title>Dashboard</title>
 {% endblock headers %}
 
 {% block content %}
@@ -12,7 +12,7 @@
     {% endblock side_menu %}
 
     {% block side_content %}
-    <div class="ml-80 mt-20 text-white h-full bg-background">
+    <div class="ml-80 text-white h-full bg-background">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quis quasi exercitationem quibusdam minima deserunt fuga praesentium corrupti enim animi architecto perferendis voluptas obcaecati, cumque nulla ea numquam, cum voluptate!</p>
     </div>
     {% endblock side_content %}
