--- a/templates/components/logo.html
+++ b/templates/components/logo.html
@@ -1,5 +1,5 @@
 {% load static %}
 
-<img src="{% static "images/timeline.jpg" %}" id="logo" class="h-5 w-5">
+<img src="{% static 'images/timeline.jpg' %}" id="logo" class="h-5 w-5">
 </img>
   
