--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -2,7 +2,7 @@
 
 
 <!-- side card -->
-<div class="h-[calc(100%-5rem)] w-80 mt-20 px-10 pt-10 fixed top-0 left-0 overflow-auto bg-darker_blue ">
+<div class="absolute h-full w-80 px-10 pt-10 z-10 overflow-auto bg-darker_blue ">
   <div class="mb-8 space-y-1.5"> 
       {% include 'components/menu_item.html' with name="Skill Tree" link="dashboard_page" %}
       {% include 'components/menu_item.html' with name="All Projects" link="summary_page" %}
