refactored setting and profile pages

--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -246,6 +246,7 @@
   --success: #43d678;
   --active: #559cde;
   --error: #e3282a;
+  --darker-blue: #00232f;
 
   /* extra color - bluish for button */
   --darker-primary: #23307a;
