--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -2,7 +2,7 @@
 
 
 <!-- side card -->
-<div class="absolute h-full w-80 px-10 pt-10 z-10 overflow-auto bg-darker_blue ">
+<div class="col-span-2 h-full w-80 px-10 pt-10 overflow-auto bg-darker-blue ">
   <div class="mb-8 space-y-1.5"> 
       {% include 'components/menu_item.html' with name="Skill Tree" link="dashboard_page" %}
       {% include 'components/menu_item.html' with name="All Projects" link="summary_page" %}
@@ -10,11 +10,6 @@
       {% include 'components/menu_item.html' with name="Settings" link="settings_page" %}
   </div>  
   <!-- the sidebar menu item -->
-  <!-- tech card  -->
-  <div class="mb-10 space-y-4">
-    {% include "components/tech_card.html" %}
-  </div>
-  <!-- end of the tech card -->
 </div>
 <!-- end of the sidebar menu item -->
 <!-- tech card  -->
