--- a/templates/app/experience_form.html
+++ b/templates/app/experience_form.html
@@ -3,13 +3,53 @@
 {% block content %}
 <form action="/experience-input" method="post">
     {% csrf_token %}
+    <button type="button" class="px-6
+      py-2.5
+      bg-blue-600
+      text-white
+      font-medium
+      text-xs
+      leading-tight
+      uppercase
+      rounded
+      shadow-md
+      hover:bg-blue-700 hover:shadow-lg
+      focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0
+      active:bg-blue-800 active:shadow-lg
+      transition
+      duration-150
+      ease-in-out" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Add Experience
+</button>
     <div 
         class = "
-            experience-modal overflow-y-auto overflow-x-hidden fixed top-0 right-0
-            left-0 z-50 w-full md:inset-0 h-600 md:h-full bg-gray-400 flex justify-center item-center
+            model experience-modal overflow-y-auto overflow-x-hidden fixed top-0 right-0
+            left-0 z-50 w-full md:inset-0 h-600 md:h-full flex justify-center items-center 
+            bg-gray-400 bg-opacity-50
         " 
         aria-hidden="true">
         <div class = "relative p-4 w-full max-w-md h-full md:h-auto">
+            <div 
+                class="modal-content border-4 shadow-lg relative flex 
+                flex-col w-full pointer-events-auto bg-clip-padding 
+                rounded-md outline-none text-current">
+                <div
+                    class="
+                    modal-header flex flex-shrink-0 items-center justify-between 
+                    p-4 border-b border-gray-200 rounded-t-md">
+                    <h5 
+                        class="text-xl font-medium leading-normal text-gray-800" 
+                        id="exampleModalLabel">
+                        Experience Input
+                    </h5>
+                    <button 
+                        type="button" 
+                        class="
+                            btn-close box-content w-4 h-4 p-1 text-black border-none 
+                            rounded-none opacity-50 focus:shadow-none focus:outline-none 
+                            focus:opacity-100 hover:text-white hover:opacity-75 hover:no-underline"
+                    data-bs-dismiss="modal" aria-label="Close">x</button>
+            </div>
             <div class='tab'>
                 {{ form.non_field_errors }}
                 <div class="fieldWrapper">
@@ -64,6 +104,7 @@
                 </div>
             </div>
             <p><input type="submit" value="Submit" /></p>
+            </div>
         </div>
     </div>
     <button 
