--- a/templates/app/d.html
+++ b/templates/app/d.html
@@ -10,9 +10,15 @@
     {% include 'components/node_side_bar.html' %}
 </div>
 <script src="https://d3js.org/d3.v7.min.js"></script>
+{% if request.user.is_authenticated %}
+<script>
+    var profile_pic = "{{ request.user.profile.image|safe }}"
+    var username = "{{ request.user }}"
+</script>
+{% endif %}
 <script>
     var tree_data  = {{ tree_json|safe }}
-    {% comment %} tree_data = JSON.parse(received_data) {% endcomment %}
+    var static_url = "{% static '' %}"
 </script>
 <script src="{% static 'js/tree.js' %}"></script>
 {% endblock content %}
